Tests/ShouldSucceed/try8.adl
CONTEXT Test

PATTERN Test1
RELATION r[A*C]
RELATION s[A*B]
RELATION t[B*C]
SPEC Q ISA B
RULE r = s;(t /\ V[Q*C])
ENDPATTERN

ENDCONTEXT

{-
   Purpose: Test on proper type casting...
   Result: PASS
-}